--- a/css/screen.css
+++ b/css/screen.css
@@ -13,11 +13,17 @@ body {
     line-height: 1.3;
 }
 
+pre {
+    word-break: break-all;
+    white-space: pre-wrap;
+}
+
 code {
     background-color: rgb(230, 230, 230);
     font-size: 0.9em;
     padding: 0.2em 0.4em;
     border-radius: 4px;
+    word-break: break-all;
 }
 
 a {
@@ -178,4 +184,26 @@ article {
 
 #grammar{
     font-size: 0.75em;
+}
+
+@media (max-width: 720px){
+
+    h1 {
+        display: block;
+        margin-bottom: 1em;
+    }
+
+    .leftColumn,
+    .rightColumn {
+        display: block;
+        width: 100%;
+    }
+
+    #links {
+        position: static;
+    }
+
+    #wrapper {
+        width: 100%;
+    }
 }
